opam-version: "2.0"
version: "0.6a"
synopsis: "A library for manipulating Labeled Transition Systems in OCaml"
maintainer: ["Jocelyn Sérot <jocelyn.serot@uca.fr>"]
authors: ["Jocelyn Sérot <jocelyn.serot@uca.fr>"]
license: "MIT"
homepage: "https://github.com/jserot/lascar"
bug-reports: "jocelyn.serot@uca.fr"
depends: [
  "dune" {>= "1.11"}
  "ocaml" {>= "4.06"}
]
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/jserot/lascar.git"
